--- a/Webforms Calculator/WebFormsCalculator.cshtml
+++ b/Webforms Calculator/WebFormsCalculator.cshtml
@@ -44,7 +44,7 @@
 		</div>
 		
 	<fieldset>
-		<legend>Type of Talk</legend>
+		<legend>calc</legend>
 		<input id='add'
 			name='add'
 			type='radio'
@@ -55,19 +55,16 @@
 			name='multiply'
 			type='radio'
 			value='multiply'
-			checked />
 		<label class='radio-label'>Multiplication</label>
 		<input id='divide'
 			name='divide'
 			type='radio'
-			value='divide'
-			checked />
+			value='divide'		
 		<label class='radio-label'>Division</label>
 		<input id='subtract'
 			name='subtract'
 			type='radio'
 			value='subtract'
-			checked />
 		<label class='radio-label'>Subtraction</label>
 	</fieldset>
 		
