--- a/Webforms Calculator/WebFormsCalculator.cshtml
+++ b/Webforms Calculator/WebFormsCalculator.cshtml
@@ -46,29 +46,32 @@
 	<fieldset>
 		<legend>calc</legend>
 		<input id='add'
-			name='add'
+			name='calc'
 			type='radio'
 			value='add'
 			checked />
 		<label class='radio-label'>Addition</label>
 		<input id='multiply'
-			name='multiply'
+			name='calc'
 			type='radio'
 			value='multiply'
 		<label class='radio-label'>Multiplication</label>
 		<input id='divide'
-			name='divide'
+			name='calc'
 			type='radio'
 			value='divide'		
 		<label class='radio-label'>Division</label>
 		<input id='subtract'
-			name='subtract'
+			name='calc'
 			type='radio'
 			value='subtract'
 		<label class='radio-label'>Subtraction</label>
 	</fieldset>
+	
+	<div class='form-row'>
+		<button>Submit</button>
+	</div>	
 		
-
 	</form>
 </body>
 </html>
