--- a/Webforms Calculator/WebFormsCalculator.cshtml
+++ b/Webforms Calculator/WebFormsCalculator.cshtml
@@ -69,7 +69,11 @@
 	</fieldset>
 	
 	<div class='form-row'>
-		<button>Submit</button>
+		<button>Calculate</button>
+		<div class='answer'>
+			<label>Answer</label>
+			<name='answer' type='text'/>
+		</div>
 	</div>	
 		
 	</form>
